--- a/0-Coursera_Notes/Notes/Notes.tex
+++ b/0-Coursera_Notes/Notes/Notes.tex
@@ -89,7 +89,7 @@ Now let\'s add more variables for the same problem, the representation of the ne
 	\includegraphics[width = .50\textwidth]{HPP.png}
 \end{center}
 The inter-connecting nods can be seen as individual Relu representations that lead to the values seen on the lines which represent important characteristics in a model and that lead to the final result; X is equal to the stack of the given inputs and Y is equal to the desired output. The \say{in-between} nods represent hidden features, these are the ones created subsequential to the input data and the network itself defines the relation between these.\\
-The network receives three different types of data:
+The network processes two different types of data:
 \begin{itemize}
 	\item The X input values
 	\item Training data
@@ -105,7 +105,7 @@ You have an input x and you want to have a result y. In the previous problem it 
 Structured data (DB with specific fields) vs unstructured data (audio, images, [···]), this tangible difference is important to take into account because historically it has been more difficult to calculate from the latter, hence the importance of the architecture design importance. Although the most \say{exciting} implementations are often the unstructured data related systems, the market has more demand for well-built structured data solutions.
 
 \subsection*{Why is Deep Learning taking off?}
-in the traditional learning algorithms, there was a point where the increment of input data did nothing for the performance of the system. In modern problem solving we have a lot of data to handle, so the design of a system which could profit from it was considered crucial. Neural networks are capable of incrementing the system performance in a better fashion than traditional implementations. 
+In the traditional learning algorithms, there was a point where the increment of input data did nothing for the performance of the system. In modern problem solving we have a lot of data to handle, so the design of a system which could profit from it was considered crucial. Neural networks are capable of incrementing the system performance in a better fashion than traditional implementations. 
 \begin{center}
 	\includegraphics[width = .50\textwidth]{PRGR.png}
 \end{center}
