--- a/0-Coursera_Notes/Notes/Notes.tex
+++ b/0-Coursera_Notes/Notes/Notes.tex
@@ -70,7 +70,7 @@ The housing price prediction problem can be seen as the simplest of Neural Netwo
 \begin{center}
 	\textit{Size x -> Neuron (does the determined function) -> Price y}
 \end{center}
-In this particular case, a Relu (Rectified Linear Unit) function \ref{fig:F1} is presented and is often seen in Neural Network examples. There can not be a house priced at \$0, hence the implementation of this type of function.
+In this particular case, a RELU (Rectified Linear Unit) function [\ref{fig:F1}] is presented and is often seen in Neural Network examples. There can not be a house priced at \$0, hence the implementation of this type of function.
 \begin{figure}
 	\centering
 	\begin{tikzpicture}
@@ -81,14 +81,14 @@ In this particular case, a Relu (Rectified Linear Unit) function \ref{fig:F1} is
 			\addplot+[mark=none,red,domain=0:5] {x};
 		\end{axis}
 	\end{tikzpicture}
-	\caption{Plot of an example Relu function} \label{fig:F1}
+	\caption{Plot of an example RELU function} \label{fig:F1}
 \end{figure}
 A neural network is produced by taking many single neurons and by stacking them together. \\
 Now let\'s add more variables for the same problem, the representation of the network would be similar to the following graph:
 \begin{center}
 	\includegraphics[width = .50\textwidth]{HPP.png}
 \end{center}
-The inter-connecting nods can be seen as individual Relu representations that lead to the values seen on the lines which represent important characteristics in a model and that lead to the final result; X is equal to the stack of the given inputs and Y is equal to the desired output. The \say{in-between} nods represent hidden features, these are the ones created subsequential to the input data and the network itself defines the relation between these.\\
+The inter-connecting nods can be seen as individual RELU representations that lead to the values seen on the lines which represent important characteristics in a model and that lead to the final result; X is equal to the stack of the given inputs and Y is equal to the desired output. The \say{in-between} nods represent hidden features, these are the ones created subsequential to the input data and the network itself defines the relation between these.\\
 The network processes two different types of data:
 \begin{itemize}
 	\item The X input values
@@ -109,9 +109,9 @@ In the traditional learning algorithms, there was a point where the increment of
 \begin{center}
 	\includegraphics[width = .50\textwidth]{PRGR.png}
 \end{center}
-One thing to note is that the \say{Ammount of Data} refers only to the amount of labeled data (contains x and y definitions). Also, the notation for the cardinality is expressed as (m).\\
+One thing to note is that the \say{Amount of Data} refers only to the amount of labeled data (contains x and y definitions). Also, the notation for the cardinality is expressed as (m).\\
 Although the increment in \say{learning room} is evident, the performance also has a cap that can occur if you run out of data or if the NN is big enough that it becomes really slow to train.\\
-Large neural nets are only necessary when a lot of data is required to precess. There can be little to no difference in large NN and small NN systems where the data-set (m) is relatively small.\\
+Large neural nets are only necessary when a lot of data is required to process. There can be little to no difference in large NN and small NN systems where the data-set (m) is relatively small.\\
 Deep learning progress has developed a weighted importance in data, computation-related (hardware-wise) and algorithmic advancements that allow the systems to come to a reality. One of the most notable innovations is the transition from sigmoid to RELU functions; sigmoid functions had areas (where b = 0) that led to the decrease of learning speed due to the slow parameter revision. The innovations of the three disciplines have helped the development cycle (idea -> code -> experiment) that leads to more architecture revisions.
 
 \section{Week 2}
@@ -120,7 +120,7 @@ Deep learning progress has developed a weighted importance in data, computation-
 Usually the data processing is based on going through the entire dataset without explicitly using a for loop. Usually the process consists of a forward pause/forward propagation step, followed by a backward pause/backward propagation step.\\
 Binary classification consists of an input x that is processed by an algorithm that outputs a binary value called label which indicates a certain input behavior or feature. For image classification (cat vs no cat), the image is decomposed to every pixel value per channel and then concatenated into a single object. \\
 A single training example is denoted by the following notation:\\
-$(x,y), x \in \mathbb{R}^{n_x}, y \in \{0,1\}$\\
+$(x,y), x \in \mathbb{R}^{n_x}, y \in \{0,1\}$; where $n_x$ is the dimension of the input features x.\\
 The training set is comprised of all the pairs of training examples, lowercase m is commonly used as the indicator for the number of training examples.\\
 In order to put the training examples in a more compact fashion, the following model must be used:
 \begin{equation}
@@ -142,8 +142,29 @@ For the label output, stacking the results in columns has also been commonly use
  \end{equation}
 
 \subsection*{Logistic Regression}
-Used when output labels are either 0 or 1. Given an input feature vector X you want an algorithm that can output a prediction which can be represented as \^y which is the estimate of Y. This before mentioned prediction is the probability $P(y=1 | x+
--)$.
+Learning algorithm used when output labels Y are either 0 or 1. Given an input feature vector $x$, you need an algorithm that can output a value $\hat{y}$ representing the prediction weather the feature vector has or has not a certain behavior; the prediction of $\hat{y}$ being equal to 1 can be written as $\hat{y} = P(y=1|x)$.\\
+Given the parameters $w \in \mathbb{R}^{n_x}, b \in \mathbb{R}$, we must be able to construct a function that goes through the feature vector $x$ and outputs $\hat{y}$. The function is a modification of $w^Tx + b$ so that the range does not exceed 1 or be smaller than 0, for this, the use of a sigmoid function is required. The sigmoid of $z$ [\ref{fig:F2}] can be calculated through the expression $\sigma(z)=\frac{1}{1+e^{-z}}$; if the $z$ value is very large the output will be closer to 1, on the contrary it will be closer to 0.
+\begin{figure}
+	\centering
+	\begin{tikzpicture}
+		\begin{axis}[
+			domain=-3:5,
+			]
+            \addplot%
+            [
+                red,%
+                mark=none,
+                samples=100,
+                domain=-6:6,
+            ]
+            (x,{1/(1+exp(-x))});
+		\end{axis}
+	\end{tikzpicture}
+	\caption{Plot of an example sigmoid function} \label{fig:F2}
+\end{figure}
+Given the previous knowledge, we can now assume the following function:$z = w^Tx + b, \hat{y} = \sigma(z)$. When implementing logistic regression, it is crucial to learn parameters $w$ and $b$ so that $\hat{y}$ becomes a good estimate of the chance of $y$ being equal to 1; $b$ usually corresponds to an inter-spectrum parameter. In neural network implementations it is recommended to keep these parameters separate although there are some implementations in which these are contained in the same vector.
+\newpage
+
 
 \chapter{Improving Deep Neural Networks}
 
